src/ui/render/branches/snapshots/herdr_worktree_nav__ui__render__branches__tests__a_branch_whose_upstream_is_gone_says_so_beside_what_it_is.snap
---
source: src/ui/render/branches.rs
expression: "branches_screen(&state, 92, 12)"
---
" / search branches                                                   ⇅ state ↓   5 branches "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
"   ● feat/login   running           #123 Add the login screen (draft)                       "
"   ○ fix/crash    checked out gone  latest work on fix/crash                                "
"   · main         local             latest work on main                                     "
"   · chore/deps   local gone        latest work on chore/deps                               "
"   ↓ feat/search  remote                                                                    "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) ───────────"
" ↵ choose  j/k move  / search  n new branch  f fetch  i order  ⇥ panes  esc back  q close   "
